--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "n98/N98_CheckoutFilters",
+    "name": "n98/n98_checkoutfilters",
     "license": "OSL-3.0",
     "type": "magento-module",
     "description": "Filter your payment and shipping methods.",
